--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -48,6 +48,15 @@ h1 {
   display: block;
   text-align: center;
 }
+.m-y-1 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.m-y-2 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 
 .m-y-3 {
   padding-top: 3rem;
@@ -74,13 +83,38 @@ h1 {
       width: 20vw;
     }
     width: 40vw;
+    &-container {
+      min-height: 40px;
+    }
   }
   &-background {
     background-color: $background-color;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
   &-hero {
     height: 100vh;
     min-height: 600px;
+  }
+  &-progress-circle {
+    font-family: "Roboto", sans-serif;
+    * text {
+      fill: white;
+    }
+  }
+  &-table {
+    padding: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    td:first-child {
+      padding-right: 1rem;
+      display: flex;
+    }
+
+    * img {
+      width: 20px;
+      height: 20px;
+    }
   }
 }
