--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,10 +25,6 @@ a:active {
   text-decoration: none !important;
 }
 
-.m0 {
-  margin: 0 !important;
-}
-
 h1 {
   text-align: center;
   font-weight: 900 !important;
@@ -49,26 +45,39 @@ h1 {
   text-align: center;
 }
 .m-y-1 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .m-y-2 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .m-y-3 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .m-t-3 {
-  padding-top: 3rem;
+  margin-top: 3rem;
+}
+
+.m-t-1 {
+  margin-top: 1rem;
 }
 
 footer {
   color: black;
+}
+
+.chart {
+  &-container {
+    @media (min-width: 576px) {
+      width: 70vw;
+    }
+    width: 90vw;
+  }
 }
 
 .ppc {
@@ -104,6 +113,13 @@ footer {
     font-family: "Roboto", sans-serif;
     * text {
       fill: white;
+    }
+  }
+  &-fork-active {
+    > h2 {
+      padding: 0.5rem;
+      border: 1px solid $accent-color;
+      border-radius: 5px;
     }
   }
   &-table {
