black color for a

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -68,7 +68,9 @@ h1 {
 }
 
 footer {
-  color: black !important;
+  > a {
+    color: black !important;
+  }
   display: flex;
   justify-content: space-evenly;
   margin: 0.5rem;
