--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -101,6 +101,8 @@ footer {
       font-size: 0.7rem;
     }
     text-align: center;
+    margin-left: 0.5rem;
+    display: contents;
   }
   &-logo {
     @media (min-width: 810px) {
