font-display: swap;

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,7 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
+  font-display: swap;
   color: $text-color;
   margin: 0;
   -webkit-font-smoothing: antialiased;
