--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -107,9 +107,10 @@ footer {
   }
   &-logo {
     @media (min-width: 810px) {
-      width: 20vw;
+      width: 240px;
     }
-    width: 40vw;
+    width: 190px;
+    height: 40px;
     &-container {
       min-height: 40px;
     }
