--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -107,7 +107,8 @@ footer {
   }
   &-logo {
     @media (min-width: 810px) {
-      width: 240px;
+      width: 300px;
+      height: 60px;
     }
     width: 190px;
     height: 40px;
